--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=forumlite
 DB_USERNAME=root
 DB_PASSWORD=
 
+PGADMIN_DEFAULT_EMAIL=michael@mstaake.com
+PGADMIN_DEFAULT_PASSWORD=password
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
