--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=forumlite
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=pgsql
+DB_USERNAME=forumlite
+DB_PASSWORD=forumlite
 
 PGADMIN_DEFAULT_EMAIL=michael@mstaake.com
 PGADMIN_DEFAULT_PASSWORD=password
