--- a/docker/8.3/Dockerfile
+++ b/docker/8.3/Dockerfile
@@ -54,8 +54,8 @@ RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.3
 #RUN groupadd --force -g $WWWGROUP sail
 #RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 
-COPY firstTimeSetup.sh /usr/local/bin/firstTimeSetup.sh
-RUN chmod +x /usr/local/bin/firstTimeSetup.sh
+COPY forumliteStartup.sh /usr/local/bin/forumliteStartup.sh
+RUN chmod +x /usr/local/bin/forumliteStartup.sh
 
 COPY start-container /usr/local/bin/start-container
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
