--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=pgsql
-DB_USERNAME=forumlite
-DB_PASSWORD=forumlite
+DB_DATABASE=forumlite
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 PGADMIN_DEFAULT_EMAIL=michael@mstaake.com
 PGADMIN_DEFAULT_PASSWORD=password
